--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "^5.0.1",
+    "swiper": "^11.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,5 +17,17 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.14"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
